@@ -3,6 +3,7 @@ package edu.choate;
 import com.google.common.collect.Sets;
 import edu.choate.structures.*;
 import edu.choate.utils.Deltas;
+import edu.choate.utils.IntArrays;
 import edu.choate.utils.IntegerSets;
 
 import java.util.*;
@@ -14,19 +15,18 @@ public class Main
 
 	static int n = 3;
 	static int k = 3;
-	static int TARGET = 15;
-	static double percentExclude = 0.8;
-	static SetList<Set<Integer>> E;
+	static int TARGET = 20;
+	static double percentExclude = 0.5;
+	static ArrayList<Set<Integer>> E;
 	static Set<Integer> V;
-	static SetList<Set<Integer>> F;
+	static ArrayList<Set<Integer>> F;
 	static int[] idealRVector; //need to find ideal R vector
-
 
 	public static void main(String[] args) throws InterruptedException
 	{
-		E = new SetList<Set<Integer>>();
+		E = new ArrayList<Set<Integer>>();
 		V = Sets.newHashSet(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
-		F = new SetList<Set<Integer>>(IntegerSets.getSubsets(V, n));
+		F = new ArrayList<Set<Integer>>(IntegerSets.getSubsets(V, n));
 		System.out.println(V);
 		idealRVector = new int[]{10, 6, 3};
 
@@ -54,48 +54,66 @@ public class Main
 
 
 	    //Step 2
+		System.out.println("Step 2");
 		step2(true);
 
 	    //Step 3
-	    while (E.size() < TARGET)
+		System.out.println("Step 3");
+		while (E.size() < TARGET)
 	    {
-		    System.out.println(E.size());
-		    Set<Set<Integer>> selectedElements = selectedElements(percentExclude);
+		    System.out.println("↳ E has size:" + E.size());
+		    ArrayList<Set<Integer>> selectedElements = selectedElements(percentExclude);
+		    System.out.println("\t↳ We have selected:" + selectedElements);
+		    for (Set<Integer> s : selectedElements)
+		    {
+			    System.out.println("\t\t↳ The IntegerSet:" + s + " has distance to idealRVector: " + IntArrays.euclideanDistance(idealRVector, toInt(s)));
+		    }
 		    F.addAll(selectedElements);
 		    E.removeAll(selectedElements);
 
 		    step2(false);
 	    }
 
-//	    System.out.println("ended with n");
-//	    System.out.println(n);
-//
-//	    System.out.println("ended with k");
-//	    System.out.println(k);
-//
-//	    System.out.println("ended with TARGET");
-//	    System.out.println(TARGET);
-//
-//	    System.out.println("ended with E");
-//	    System.out.println(E);
-//
-//	    System.out.println("ended with V");
-//	    System.out.println(V);
-//
-//	    System.out.println("ended with F");
-//	    System.out.println(F);
+	    System.out.println("ended with n");
+	    System.out.println(n);
+
+	    System.out.println("ended with k");
+	    System.out.println(k);
+
+	    System.out.println("ended with TARGET");
+	    System.out.println(TARGET);
+
+	    System.out.println("ended with E");
+	    System.out.println(E);
+
+	    System.out.println("ended with V");
+	    System.out.println(V);
+
+	    System.out.println("ended with F");
+	    System.out.println(F);
     }
 
-	public static Set<Set<Integer>> selectedElements(double incomingExclusionPercentage)
+	public static ArrayList<Set<Integer>> selectedElements(double incomingExclusionPercentage)
 	{
-		SetList<Set<Integer>> eClone = new SetList<Set<Integer>>(E);
-		Collections.sort(eClone, new IntegerSetUsingRVectorComparator(idealRVector, eClone, n));
+		ArrayList<Set<Integer>> eClone = new ArrayList<Set<Integer>>(E);
+		System.out.println("Before sort: " + eClone);
+		IntegerSetUsingRVectorComparator comparator =  new IntegerSetUsingRVectorComparator(idealRVector, eClone, n);
+		for (Set<Integer> s : eClone)
+		{
+			System.out.println("\t\t↳ The IntegerSet:" + s + " has distance to idealRVector: " + IntArrays.euclideanDistance(idealRVector, comparator.rVectorOf(s)));
+		}
+		Collections.sort(eClone, comparator);
+		System.out.println("After sort: " + eClone);
+		for (Set<Integer> s : eClone)
+		{
+			System.out.println("\t\t↳ The IntegerSet:" + s + " has distance to idealRVector: " + IntArrays.euclideanDistance(idealRVector, comparator.rVectorOf(s)));
+		}
 
 		int numExcluded = (int)(eClone.size() * incomingExclusionPercentage);
 
 		for (int i = 0; i < numExcluded; i++)
 		{
-			eClone.removeLast();
+			eClone.remove(eClone.size()-1);
 		}
 
 		return eClone;
@@ -123,17 +141,23 @@ public class Main
 		for (Set<Integer> f : dup)
 		{
 
-
 			Set<Integer> actualF = F.get(F.indexOf(f));
 			Set<Set<Integer>> union = new HashSet<Set<Integer>>(E);
 			union.add(actualF);
 
-			if (Deltas.isDeltaKFree(Sets.union(E, F), k))
+			if (Deltas.isDeltaKFree(union, k))
 			{
 				E.add(actualF);
 				F.remove(actualF);
 			}
 		}
+	}
+
+	public static int[] toInt(Set<Integer> set) {
+		int[] a = new int[set.size()];
+		int i = 0;
+		for (Integer val : set) a[i++] = val;
+		return a;
 	}
 
 }
